# absolute-to-relative-sibling

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: test.yml
absolute_to_relative_sibling/: __init__.py  git.py
tests/: conftest.py  test_basic.py  test_cli.py  test_git_ignore.py  utils.py
