[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "absolute-to-relative-sibling"
dynamic = ["version"]
description = "Rewrite your absolute imports to relative imports from siblings"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["linter", "import"]
authors = [{name = "glepape", email = "gui.lepape25@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typer==0.9.0",
    "pathspec>=0.11.2",
]

[project.scripts]
absolute-to-relative-sibling = "absolute_to_relative_sibling:app"

[tool.hatch.version]
path = "absolute_to_relative_sibling/__init__.py"

[tool.black]
target-version = ["py37"]
line-length = 100

[tool.ruff]
target-version = "py37"
line-length = 100
preview = true
fix = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Ignore print
    "T201",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
